# simple_bot_test

./: Dockerfile  README.md  pyproject.toml
src/: .env  bot.py  config.py  forms.py  run.py
src/handlers/: __init__.py  base.py  converter.py  poll.py  weather.py
