[tool.poetry]
name = "assistent-bot-assignment"
version = "0.1.0"
description = ""
authors = ["RussianProgram <kurban.kerimhanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
requests = "^2.28.2"
black = "^23.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
